# paper-review-panel

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/skills/paper-review/: SKILL.md
src/review_panel/: __init__.py  cli.py  client.py  config.py  panel.py  pdf.py  render.py  reviewers.yaml  schemas.py  triage.py
tests/: test_pdf.py  test_render.py  test_schemas.py
